# swagger.json
@@ -26,6 +26,27 @@
     }
   ],
   "paths": {
+    "/users/count": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get user count and sample avatars",
+        "responses": {
+          "200": {
+            "description": "Successful retrieval of user count and avatars",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CountResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
     "/users/register": {
       "post": {
         "tags": ["Users"],
@@ -495,6 +516,18 @@
   },
   "components": {
     "schemas": {
+      "CountResponse": {
+        "type": "object",
+        "properties": {
+          "userCount": {
+            "type": "integer",
+            "description": "Total number of users"
+          }
+        },
+        "example": {
+          "userCount": 100
+        }
+      },
       "SignUpRequest": {
         "type": "object",
         "required": ["email", "password"],
@@ -614,10 +647,6 @@
       "GetCurrentResponse": {
         "type": "object",
         "properties": {
-          "token": {
-            "type": "string",
-            "description": "JWT token for authentication"
-          },
           "user": {
             "type": "object",
             "properties": {
@@ -653,16 +682,11 @@
               "avatarURL": {
                 "$ref": "#/components/examples/users/avatarURL",
                 "description": "URL to user's avatar image"
-              },
-              "verify": {
-                "type": "boolean",
-                "description": "User's verification status (true/false)"
               }
             }
           }
         },
         "example": {
-          "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoiMTIzNDU2Nzg5IiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
           "user": {
             "id": "123456789",
             "name": "John Doe",
@@ -671,8 +695,7 @@
             "weight": 70,
             "activeTimeSports": 5,
             "waterDrink": 2,
-            "avatarURL": "//www.gravatar.com/avatar/c951f1265ed645cea2c372ecd9672f5f",
-            "verify": true
+            "avatarURL": "//www.gravatar.com/avatar/c951f1265ed645cea2c372ecd9672f5f"
           }
         }
       },
@@ -704,9 +727,6 @@
           },
           "activeTimeSports": {
             "$ref": "#/components/examples/users/activeTimeSports"
-          },
-          "avatarURL": {
-            "$ref": "#/components/examples/users/avatarURL"
           }
         }
       },
@@ -717,7 +737,7 @@
             "type": "string",
             "description": "Message indicating the update status"
           },
-          "value": {
+          "user": {
             "type": "object",
             "properties": {
               "name": {
@@ -737,9 +757,6 @@
               },
               "activeTimeSports": {
                 "$ref": "#/components/examples/users/activeTimeSports"
-              },
-              "avatarURL": {
-                "$ref": "#/components/schemas/AvatarUpdateResponse"
               }
             }
           }
@@ -934,16 +951,6 @@
           "description": "User's token",
           "example": "Abcd1234"
         },
-        "refreshToken": {
-          "type": "string",
-          "description": "User's token",
-          "example": "Abcd1234"
-        },
-        "userId": {
-          "type": "string",
-          "description": "User's id",
-          "example": "64b1e25f6b0a2ccb95591ec7"
-        },
         "name": {
           "type": "string",
           "description": "User's name",
@@ -957,7 +964,7 @@
         "gender": {
           "type": "string",
           "description": "User's gender",
-          "example": "Woman"
+          "example": "woman"
         },
         "weight": {
           "type": "number",
@@ -983,11 +990,6 @@
           "type": "string",
           "description": "Verifying success",
           "example": "Verifying success"
-        },
-        "verify": {
-          "type": "boolean",
-          "description": "User's verifying",
-          "example": true
         }
       }
     },
